--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<script type="text/javascript" src="aframe-lod.js"></script>
 	</head>
 	<body>
-		<a-scene>
+		<a-scene sky="false">
 			<a-assets>
 				<a-asset-item id="Icosphere_1" src="assets/Icosphere_1.glb"></a-asset-item>
 				<a-asset-item id="Icosphere_2" src="assets/Icosphere_2.glb"></a-asset-item>
