--- a/index.html
+++ b/index.html
@@ -24,13 +24,19 @@
 			</a-lod>
 			
 			<a-lod position="0 0 0" rotation="-90 0 0" scale="10 10 10" >
-				<a-plane wireframe="true" lod-level="1" color="green"></a-plane>
+				<a-plane wireframe="false" lod-level="1" color="green"></a-plane>
 				<a-plane wireframe="true" lod-level="2" color="orange"></a-plane>
 				<a-plane wireframe="true" lod-level="3" color="red"></a-plane>
 			</a-lod>
 			
-			<a-lod position="0 0 10" rotation="-90 0 0" scale="10 10 10" >
-				<a-plane wireframe="true" lod-level="1" color="green"></a-plane>
+			<a-lod position="0 0 -10" rotation="-90 0 0" scale="10 10 10" >
+				<a-plane wireframe="fasle" lod-level="1" color="green"></a-plane>
+				<a-plane wireframe="true" lod-level="2" color="orange"></a-plane>
+				<a-plane wireframe="true" lod-level="3" color="red"></a-plane>
+			</a-lod> 
+
+			<a-lod position="0 0 -20" rotation="-90 0 0" scale="10 10 10" >
+				<a-plane wireframe="fasle" lod-level="1" color="green"></a-plane>
 				<a-plane wireframe="true" lod-level="2" color="orange"></a-plane>
 				<a-plane wireframe="true" lod-level="3" color="red"></a-plane>
 			</a-lod> 
