--- a/index.html
+++ b/index.html
@@ -16,29 +16,35 @@
 			
 			<!--<a-entity gltf-model="#myModel" position="0 0 -5" scale="1 1 1" rotation="0 180 0"></a-entity>-->
 			<a-lod position="0 0 -2.5" scale="1 1 1" rotation="0 180 0">
-				<a-entity lod-level="1" gltf-model="#Icosphere_6"></a-entity>
+				<a-entity lod-level="0" gltf-model="#Icosphere_6"></a-entity>
 				<a-entity lod-level="2" gltf-model="#Icosphere_4"></a-entity>
-				<a-entity lod-level="4" gltf-model="#Icosphere_2"></a-entity>			
-				<a-entity lod-level="6" gltf-model="#Icosphere_1"></a-entity>
+				<a-entity lod-level="5" gltf-model="#Icosphere_2"></a-entity>			
+				<a-entity lod-level="10" gltf-model="#Icosphere_1"></a-entity>
 				<a-entity lod-level="8"></a-entity>
 			</a-lod>
 			
-			<a-lod position="0 0 0" rotation="-90 0 0" scale="10 10 10" >
-				<a-plane wireframe="false" lod-level="1" color="green"></a-plane>
+			<a-lod position="0 0 0" rotation="-90 0 0" scale="5 5 5" >
+				<a-plane wireframe="false" lod-level="0" color="green"></a-plane>
 				<a-plane wireframe="true" lod-level="2" color="orange"></a-plane>
-				<a-plane wireframe="true" lod-level="3" color="red"></a-plane>
+				<a-plane wireframe="true" lod-level="5" color="red"></a-plane>
+			</a-lod>
+
+			<a-lod position="0 0 -5" rotation="-90 0 0" scale="5 5 5" >
+				<a-plane wireframe="false" lod-level="0" color="green"></a-plane>
+				<a-plane wireframe="true" lod-level="2" color="orange"></a-plane>
+				<a-plane wireframe="true" lod-level="5" color="red"></a-plane>
 			</a-lod>
 			
-			<a-lod position="0 0 -10" rotation="-90 0 0" scale="10 10 10" >
-				<a-plane wireframe="fasle" lod-level="1" color="green"></a-plane>
+			<a-lod position="0 0 -10" rotation="-90 0 0" scale="5 5 5" >
+				<a-plane wireframe="fasle" lod-level="0" color="green"></a-plane>
 				<a-plane wireframe="true" lod-level="2" color="orange"></a-plane>
-				<a-plane wireframe="true" lod-level="3" color="red"></a-plane>
+				<a-plane wireframe="true" lod-level="5" color="red"></a-plane>
 			</a-lod> 
 
-			<a-lod position="0 0 -20" rotation="-90 0 0" scale="10 10 10" >
-				<a-plane wireframe="fasle" lod-level="1" color="green"></a-plane>
+			<a-lod position="0 0 -15" rotation="-90 0 0" scale="10 10 10" >
+				<a-plane wireframe="fasle" lod-level="0" color="green"></a-plane>
 				<a-plane wireframe="true" lod-level="2" color="orange"></a-plane>
-				<a-plane wireframe="true" lod-level="3" color="red"></a-plane>
+				<a-plane wireframe="true" lod-level="5" color="red"></a-plane>
 			</a-lod> 
 			
 			<a-light type="directional" position="0 1 1" intensity="1"></a-light>
