--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 			
 			<a-lod position="0 0 0" rotation="-90 0 0" scale="5 5 5" >
 				<a-plane wireframe="false" lod-level="0" color="green"></a-plane>
-				<a-plane wireframe="true" lod-level="2" color="orange"></a-plane>
-				<a-plane wireframe="true" lod-level="5" color="red"></a-plane>
+				<a-plane wireframe="fasle" lod-level="2" color="orange"></a-plane>
+				<a-plane wireframe="fasle" lod-level="5" color="red"></a-plane>
 			</a-lod>
 
 			<a-lod position="0 0 -5" rotation="-90 0 0" scale="5 5 5" >
@@ -41,7 +41,7 @@
 				<a-plane wireframe="true" lod-level="5" color="red"></a-plane>
 			</a-lod> 
 
-			<a-lod position="0 0 -15" rotation="-90 0 0" scale="10 10 10" >
+			<a-lod position="0 0 -15" rotation="-90 0 0" scale="5 5 5" >
 				<a-plane wireframe="fasle" lod-level="0" color="green"></a-plane>
 				<a-plane wireframe="true" lod-level="2" color="orange"></a-plane>
 				<a-plane wireframe="true" lod-level="5" color="red"></a-plane>
