--- a/index.html
+++ b/index.html
@@ -20,31 +20,42 @@
 				<a-entity lod-level="2" gltf-model="#Icosphere_4"></a-entity>
 				<a-entity lod-level="5" gltf-model="#Icosphere_2"></a-entity>			
 				<a-entity lod-level="10" gltf-model="#Icosphere_1"></a-entity>
-				<a-entity lod-level="8"></a-entity>
+				<a-entity lod-level="20"></a-entity>
 			</a-lod>
 			
 			<a-lod position="0 0 0" rotation="-90 0 0" scale="5 5 5" >
 				<a-plane wireframe="false" lod-level="0" color="green"></a-plane>
 				<a-plane wireframe="fasle" lod-level="2" color="orange"></a-plane>
 				<a-plane wireframe="fasle" lod-level="5" color="red"></a-plane>
+				<a-plane wireframe="fasle" lod-level="10" color="black"></a-plane>
 			</a-lod>
 
 			<a-lod position="0 0 -5" rotation="-90 0 0" scale="5 5 5" >
 				<a-plane wireframe="false" lod-level="0" color="green"></a-plane>
-				<a-plane wireframe="true" lod-level="2" color="orange"></a-plane>
-				<a-plane wireframe="true" lod-level="5" color="red"></a-plane>
+				<a-plane wireframe="false" lod-level="2" color="orange"></a-plane>
+				<a-plane wireframe="false" lod-level="5" color="red"></a-plane>
+				<a-plane wireframe="fasle" lod-level="10" color="black"></a-plane>
 			</a-lod>
 			
 			<a-lod position="0 0 -10" rotation="-90 0 0" scale="5 5 5" >
 				<a-plane wireframe="fasle" lod-level="0" color="green"></a-plane>
-				<a-plane wireframe="true" lod-level="2" color="orange"></a-plane>
-				<a-plane wireframe="true" lod-level="5" color="red"></a-plane>
+				<a-plane wireframe="fasle" lod-level="2" color="orange"></a-plane>
+				<a-plane wireframe="fasle" lod-level="5" color="red"></a-plane>
+				<a-plane wireframe="fasle" lod-level="10" color="black"></a-plane>
 			</a-lod> 
 
 			<a-lod position="0 0 -15" rotation="-90 0 0" scale="5 5 5" >
 				<a-plane wireframe="fasle" lod-level="0" color="green"></a-plane>
-				<a-plane wireframe="true" lod-level="2" color="orange"></a-plane>
-				<a-plane wireframe="true" lod-level="5" color="red"></a-plane>
+				<a-plane wireframe="false" lod-level="2" color="orange"></a-plane>
+				<a-plane wireframe="false" lod-level="5" color="red"></a-plane>
+				<a-plane wireframe="fasle" lod-level="10" color="black"></a-plane>
+			</a-lod>
+			
+			<a-lod position="0 0 -20" rotation="-90 0 0" scale="5 5 5" >
+				<a-plane wireframe="fasle" lod-level="0" color="green"></a-plane>
+				<a-plane wireframe="false" lod-level="2" color="orange"></a-plane>
+				<a-plane wireframe="false" lod-level="5" color="red"></a-plane>
+				<a-plane wireframe="fasle" lod-level="10" color="black"></a-plane>
 			</a-lod> 
 			
 			<a-light type="directional" position="0 1 1" intensity="1"></a-light>
