--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			</a-assets>
 			
 			<!--<a-entity gltf-model="#myModel" position="0 0 -5" scale="1 1 1" rotation="0 180 0"></a-entity>-->
-			<a-lod position="0 0 -2.5" scale="1 1 1" rotation="0 180 0">
+			<a-lod position="0 0 -20" scale="1 1 1" rotation="0 180 0">
 				<a-entity lod-level="0" gltf-model="#Icosphere_6"></a-entity>
 				<a-entity lod-level="2" gltf-model="#Icosphere_4"></a-entity>
 				<a-entity lod-level="5" gltf-model="#Icosphere_2"></a-entity>			
@@ -24,38 +24,38 @@
 			</a-lod>
 			
 			<a-lod position="0 0 0" rotation="-90 0 0" scale="5 5 5" >
-				<a-plane wireframe="false" lod-level="0" color="green"></a-plane>
-				<a-plane wireframe="fasle" lod-level="2" color="orange"></a-plane>
-				<a-plane wireframe="fasle" lod-level="5" color="red"></a-plane>
-				<a-plane wireframe="fasle" lod-level="10" color="black"></a-plane>
+				<a-plane lod-level="0" color="green"></a-plane>
+				<a-plane lod-level="2" color="orange"></a-plane>
+				<a-plane lod-level="5" color="red"></a-plane>
+				<a-plane wireframe="true" lod-level="10" color="black"></a-plane>
 			</a-lod>
 
 			<a-lod position="0 0 -5" rotation="-90 0 0" scale="5 5 5" >
-				<a-plane wireframe="false" lod-level="0" color="green"></a-plane>
-				<a-plane wireframe="false" lod-level="2" color="orange"></a-plane>
-				<a-plane wireframe="false" lod-level="5" color="red"></a-plane>
-				<a-plane wireframe="fasle" lod-level="10" color="black"></a-plane>
+				<a-plane lod-level="0" color="green"></a-plane>
+				<a-plane lod-level="2" color="orange"></a-plane>
+				<a-plane lod-level="5" color="red"></a-plane>
+				<a-plane wireframe="true" lod-level="10" color="black"></a-plane>
 			</a-lod>
 			
 			<a-lod position="0 0 -10" rotation="-90 0 0" scale="5 5 5" >
-				<a-plane wireframe="fasle" lod-level="0" color="green"></a-plane>
-				<a-plane wireframe="fasle" lod-level="2" color="orange"></a-plane>
-				<a-plane wireframe="fasle" lod-level="5" color="red"></a-plane>
-				<a-plane wireframe="fasle" lod-level="10" color="black"></a-plane>
+				<a-plane lod-level="0" color="green"></a-plane>
+				<a-plane lod-level="2" color="orange"></a-plane>
+				<a-plane lod-level="5" color="red"></a-plane>
+				<a-plane wireframe="true" lod-level="10" color="black"></a-plane>
 			</a-lod> 
 
 			<a-lod position="0 0 -15" rotation="-90 0 0" scale="5 5 5" >
-				<a-plane wireframe="fasle" lod-level="0" color="green"></a-plane>
-				<a-plane wireframe="false" lod-level="2" color="orange"></a-plane>
-				<a-plane wireframe="false" lod-level="5" color="red"></a-plane>
-				<a-plane wireframe="fasle" lod-level="10" color="black"></a-plane>
+				<a-plane lod-level="0" color="green"></a-plane>
+				<a-plane lod-level="2" color="orange"></a-plane>
+				<a-plane lod-level="5" color="red"></a-plane>
+				<a-plane wireframe="true" lod-level="10" color="black"></a-plane>
 			</a-lod>
 			
 			<a-lod position="0 0 -20" rotation="-90 0 0" scale="5 5 5" >
-				<a-plane wireframe="fasle" lod-level="0" color="green"></a-plane>
-				<a-plane wireframe="false" lod-level="2" color="orange"></a-plane>
-				<a-plane wireframe="false" lod-level="5" color="red"></a-plane>
-				<a-plane wireframe="fasle" lod-level="10" color="black"></a-plane>
+				<a-plane lod-level="0" color="green"></a-plane>
+				<a-plane lod-level="2" color="orange"></a-plane>
+				<a-plane lod-level="5" color="red"></a-plane>
+				<a-plane wireframe="true" lod-level="10" color="black"></a-plane>
 			</a-lod> 
 			
 			<a-light type="directional" position="0 1 1" intensity="1"></a-light>
