--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 				<a-asset-item id="Icosphere_4" src="assets/Icosphere_4.glb"></a-asset-item>
 				<a-asset-item id="Icosphere_6" src="assets/Icosphere_6.glb"></a-asset-item>
 			</a-assets>
+
+			<a-camera>
+				<a-cursor>
+				</a-cursor>
+			</a-camera>
 			
 			<!--<a-entity gltf-model="#myModel" position="0 0 -5" scale="1 1 1" rotation="0 180 0"></a-entity>-->
 			<a-lod position="0 1.25 -20" scale="1 1 1" rotation="0 180 0">
